--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,8 +21,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// swagger
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	implementation 'org.projectlombok:lombok:1.18.22' // Lombok 의존성 추가
+	annotationProcessor 'org.projectlombok:lombok:1.18.22' // Lombok Annotation Processor 추가
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22' // Lombok Annotation Processor 추가
+	testImplementation 'org.projectlombok:lombok:1.18.22' // Lombok 의존성 추가
 
 }
 
