--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,7 +25,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.22' // Lombok Annotation Processor 추가
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22' // Lombok Annotation Processor 추가
 	testImplementation 'org.projectlombok:lombok:1.18.22' // Lombok 의존성 추가
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
 }
 
 tasks.named('test') {
