--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
+	// SQL 연동
+	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
