--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "eslint-plugin-import": "^2.29.1"
   },
   "dependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.1.1",
-    "node-emoji": "^2.1.3"
+    "node-emoji": "^2.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "name": "minyong",
   "version": "1.0.0",
