chore: 주석 추가, 공백 제거 등 자잘한 수정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.encoding.force=true
+
 # 스프링 시큐리티 로깅 레벨 설정
 logging.level.org.springframework.security=DEBUG
 
@@ -19,8 +21,3 @@ spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-# H2 설정
-spring.h2.console.enabled=true
-spring.datasource.h2.url=jdbc:h2:mem:testdb
-spring.datasource.h2.driver-class-name=org.h2.Driver
