--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -21,19 +21,26 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.projectlombok:lombok:1.18.22' // Lombok 의존성 추가
-	annotationProcessor 'org.projectlombok:lombok:1.18.22' // Lombok Annotation Processor 추가
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22' // Lombok Annotation Processor 추가
-	testImplementation 'org.projectlombok:lombok:1.18.22' // Lombok 의존성 추가
+
+	// Lombok 의존성 추가, Lombok Annotation Processor 추가
+	implementation 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.projectlombok:lombok:1.18.22'
+
+	// validation 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
 
+	// mySQL 연동
 	implementation 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//JUnit test
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'org.springframework.security:spring-security-ldap:5.5.0'
 }
 
 tasks.named('test') {
