--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "node-emoji": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.26",
     "react-scripts": "^5.0.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
