--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,14 @@
     "babel-loader": "^9.1.3",
     "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.1.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "node-emoji": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "sort-by": "^1.2.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
