--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,8 +2,8 @@ HELP.md
 .gradle
 #build/
 #!gradle/wrapper/gradle-wrapper.jar
-#!**/src/main/**/build/
-#!**/src/test/**/build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-application.properties
+#application.properties
 .idea
 *.iws
 *.iml
