--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 .gradle
-#build/
-#!gradle/wrapper/gradle-wrapper.jar
+build/
+!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-#application.properties
+application.properties
 .idea
 *.iws
 *.iml
