--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "node-emoji": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
