--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,8 +2,7 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+!backend/build/libs/backend-0.0.1-SNAPSHOT.jar
 
 ### STS ###
 .apt_generated
