--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -64,7 +64,7 @@
         "tsx": "never"
       }
     ],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": [true, "**/*.jsx"] }],
     "max-len": [
       "error",
       {
