--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -67,7 +67,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": [true, "src/**/*.js", "src/**/*.jsx"],
+        "devDependencies": [true],
         "optionalDependencies": false,
         "peerDependencies": false
       }
