--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -67,9 +67,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": [true],
-        "optionalDependencies": false,
-        "peerDependencies": false
+        "devDependencies": [true, "**/*.test.js", "**/*.test.jsx", "**/*.spec.js", "**/*.spec.jsx"] // "src/**/*.js", "src/**/*.jsx"
       }
     ],
     "max-len": [
