--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "axios": "^1.6.7",
     "babel-loader": "^9.1.3",
     "gh-pages": "^6.1.1",
     "localforage": "^1.10.0",
@@ -21,8 +22,8 @@
     "node-emoji": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
     "react-kakao-maps-sdk": "^1.1.26",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
     "webpack": "^5.90.1",
